tests/ui/compiletest-self-test/ui-testing-optout.stderr
error[E0425]: cannot find type `B` in this scope
 --> $DIR/ui-testing-optout.rs:4:10
  |
4 | type A = B;
  |          ^ not found in this scope

error[E0425]: cannot find type `D` in this scope
 --> $DIR/ui-testing-optout.rs:7:10
  |
4 | type A = B;
  | ----------- similarly named type alias `A` defined here
...
7 | type C = D;
  |          ^
  |
help: a type alias with a similar name exists
  |
7 - type C = D;
7 + type C = A;
  |

error[E0425]: cannot find type `F` in this scope
  --> $DIR/ui-testing-optout.rs:92:10
   |
 4 | type A = B;
   | ----------- similarly named type alias `A` defined here
...
92 | type E = F;
   |          ^
   |
help: a type alias with a similar name exists
   |
92 - type E = F;
92 + type E = A;
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
